--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
         <h2>Our Products</h2>
         <div class="product-list">
             <div class="product">
-                <img src="knife1.JPG" alt="Knife 1" class="product-image" onclick="openModal(this)">
+                <img src="Knife1.JPG" alt="Knife 1" class="product-image" onclick="openModal(this)">
                 <h3>Chef's Knife</h3>
                 <p>High-quality chef's knife for professional kitchens.</p>
             </div>
             <div class="product">
-                <img src="knife2.JPG" alt="Knife 2" class="product-image" onclick="openModal(this)">
+                <img src="Knife2.JPG" alt="Knife 2" class="product-image" onclick="openModal(this)">
                 <h3>Paring Knife</h3>
                 <p>Perfect for intricate cutting and peeling tasks.</p>
             </div>
             <div class="product">
-                <img src="knife3.JPG" alt="Knife 3" class="product-image" onclick="openModal(this)">
+                <img src="Knife3.JPG" alt="Knife 3" class="product-image" onclick="openModal(this)">
                 <h3>Santoku Knife</h3>
                 <p>Versatile knife for various cutting tasks.</p>
             </div>
             <div class="product">
-                <img src="knife4.JPG" alt="Knife 4" class="product-image" onclick="openModal(this)">
+                <img src="Knife4.JPG" alt="Knife 4" class="product-image" onclick="openModal(this)">
                 <h3>Utility Knife</h3>
                 <p>Essential knife for everyday use.</p>
             </div>
             <div class="product">
-                <img src="knife5.JPG" alt="Knife 5" class="product-image" onclick="openModal(this)">
+                <img src="Knife5.JPG" alt="Knife 5" class="product-image" onclick="openModal(this)">
                 <h3>Boning Knife</h3>
                 <p>Perfect for boning meat and fish.</p>
             </div>
             <div class="product">
-                <img src="knife6.JPG" alt="Knife 6" class="product-image" onclick="openModal(this)">
+                <img src="Knife6.JPG" alt="Knife 6" class="product-image" onclick="openModal(this)">
                 <h3>Bread Knife</h3>
                 <p>Ideal for slicing bread and baked goods.</p>
             </div>
